Closed
Bug 421552
Opened 17 years ago
Closed 17 years ago
allow users to send a crash report and quit firefox
Categories
(Toolkit :: Crash Reporting, defect)
Toolkit
Crash Reporting
Tracking
()
RESOLVED
FIXED
People
(Reporter: beltzner, Assigned: beltzner)
References
Details
(Keywords: late-l10n)
Attachments
(1 file, 4 obsolete files)
|
11.56 KB,
patch
|
beltzner
:
review+
shaver
:
approval1.9+
|
Details | Diff | Splinter Review |
The current crash reporter doesn't allow users to submit a crash report but *not* restart Firefox, which is pretty frustrating for people who want to submit reports but don't want to get caught in an infinite loop of crashes. There are other ways around it, but we should support the "send then quit" scenario.
Attached is a patch which makes the required string changes. I'll need some help:
- changing the logic so if the checkbox is selected we send the report before quitting
- changing the way the quit button is constructed to take the %s parameter
(the change to CommentGrayText is cosmetic and doesn't need an entity change)
Attachment #307988 -
Flags: review?(ted.mielczarek)
Updated•17 years ago
|
Version: unspecified → Trunk
Comment 1•17 years ago
|
||
Comment on attachment 307988 [details] [diff] [review]
changes ReportPreSubmit, Quit and CommentGrayText
>-# LOCALIZATION NOTE (Restart): The %s is replaced with the product name.
>+# LOCALIZATION NOTE (Quit2, Restart): The %s is replaced with the product name.
>+Quit2=Quit %s
> Restart=Restart %s
I think you are supposed to have one localization note per-entity that needs it.
r=me, obviously we'll need code changes to go along with this.
*sigh*
Attachment #307988 -
Flags: review?(ted.mielczarek) → review+
| Assignee | ||
Comment 2•17 years ago
|
||
Thanks for the help, Ted. Here's a patch that adds a maybeSubmitReport method on OSX and Linux (already had it on w32) and changes things so that both the close and restart buttons use it.
Includes the previous string changes and your nit on localization notes.
Submitted this to the tryserver just now, as well.
Attachment #307988 -
Attachment is obsolete: true
Attachment #308003 -
Flags: review?
| Assignee | ||
Updated•17 years ago
|
Attachment #308003 -
Flags: review? → review?(ted.mielczarek)
Comment 3•17 years ago
|
||
Comment on attachment 308003 [details] [diff] [review]
changes strings, adds maybeSubmitReport to linux and osx
r=me assuming your second round of try server builds succeed (after you've fixed the ST_QUIT2 typo).
Attachment #308003 -
Flags: review?(ted.mielczarek) → review+
| Assignee | ||
Comment 4•17 years ago
|
||
I outsmarted myself.
Resubmitted to tryserver!
Attachment #308003 -
Attachment is obsolete: true
Attachment #308008 -
Flags: review?(ted.mielczarek)
Comment 5•17 years ago
|
||
Comment on attachment 308008 [details] [diff] [review]
changes strings, adds maybeSubmitReport to linux and osx (v3)
I already gave you r+! Here, take it again!
Attachment #308008 -
Flags: review?(ted.mielczarek) → review+
| Assignee | ||
Comment 6•17 years ago
|
||
Carrying over review. Tested on OSX and Win32 successfully. Just changing the "Submitting your report..." string as well with this new patch, since we're no longer sure that we're restarting.
Attachment #308008 -
Attachment is obsolete: true
Attachment #308027 -
Flags: review+
Attachment #308027 -
Flags: approval1.9+
| Assignee | ||
Comment 7•17 years ago
|
||
(sigh, as a patch this time)
Attachment #308027 -
Attachment is obsolete: true
Attachment #308028 -
Flags: review+
Attachment #308028 -
Flags: approval1.9+
| Assignee | ||
Updated•17 years ago
|
Keywords: checkin-needed,
late-l10n
| Assignee | ||
Updated•17 years ago
|
Attachment #308027 -
Flags: review+
Attachment #308027 -
Flags: approval1.9+
| Assignee | ||
Updated•17 years ago
|
Attachment #308028 -
Flags: approval1.9+ → approval1.9?
Comment 8•17 years ago
|
||
Comment on attachment 308028 [details] [diff] [review]
changes strings, adds maybeSubmitReport to linux and osx (v4)
Oh yes. Oh very yes.
a=shaver
Attachment #308028 -
Flags: approval1.9? → approval1.9+
Updated•17 years ago
|
Assignee: nobody → beltzner
Comment 9•17 years ago
|
||
Checking in toolkit/crashreporter/client/crashreporter.cpp;
/cvsroot/mozilla/toolkit/crashreporter/client/crashreporter.cpp,v <-- crashreporter.cpp
new revision: 1.20; previous revision: 1.19
done
Checking in toolkit/crashreporter/client/crashreporter.h;
/cvsroot/mozilla/toolkit/crashreporter/client/crashreporter.h,v <-- crashreporter.h
new revision: 1.13; previous revision: 1.12
done
Checking in toolkit/crashreporter/client/crashreporter_linux.cpp;
/cvsroot/mozilla/toolkit/crashreporter/client/crashreporter_linux.cpp,v <-- crashreporter_linux.cpp
new revision: 1.16; previous revision: 1.15
done
Checking in toolkit/crashreporter/client/crashreporter_osx.h;
/cvsroot/mozilla/toolkit/crashreporter/client/crashreporter_osx.h,v <-- crashreporter_osx.h
new revision: 1.9; previous revision: 1.8
done
Checking in toolkit/crashreporter/client/crashreporter_osx.mm;
/cvsroot/mozilla/toolkit/crashreporter/client/crashreporter_osx.mm,v <-- crashreporter_osx.mm
new revision: 1.19; previous revision: 1.18
done
Checking in toolkit/crashreporter/client/crashreporter_win.cpp;
/cvsroot/mozilla/toolkit/crashreporter/client/crashreporter_win.cpp,v <-- crashreporter_win.cpp
new revision: 1.24; previous revision: 1.23
done
Checking in toolkit/locales/en-US/crashreporter/crashreporter.ini;
/cvsroot/mozilla/toolkit/locales/en-US/crashreporter/crashreporter.ini,v <-- crashreporter.ini
new revision: 1.8; previous revision: 1.7
done
You need to log in
before you can comment on or make changes to this bug.
Description
•