bug 421552 - allow users to send a crash report and quit firefox. patch by Mike Beltzner <beltzner@mozilla.com>, r=me, a=shaver